--- a/cadastro.html
+++ b/cadastro.html
@@ -12,7 +12,8 @@
 <body>
 
     <header>
-        <h1>Faça Seu Cadastro</h1>
+        <h1>Faça Seu Cadastro pagina teste curso docker DIO</h1>
+        <p> </p>
     </header>
 
     <div>
@@ -66,15 +67,15 @@
 
     <style>
         body {
-        background-image: url('imagens/cadastro.jpg');
-        background-size: cover;
-        background-color: #f7fbfc;
-        max-height: 300px;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: relative;
-    }
+            background-image: url('imagens/cadastro.jpg');
+            background-size: cover;
+            background-color: #f7fbfc;
+            max-height: 300px;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
+        }
     </style>
 
     <script src="script.js"></script>
